# lichess_data_download

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: ArgumentHandler.hpp  ArgumentParser.hpp  ArgumentParsing.hpp  Download.hpp  DownloadManager.cpp  DownloadManager.hpp  DownloadParser.hpp  Downloader.cpp  Downloader.hpp  Utilities.hpp  main.cpp
src/db/: DBConnection.hpp  SQLInsertBuiling.hpp
src/db/postgres/: PostgresConnection.cpp  PostgresConnection.hpp
src/download/: DataDownloading.hpp  DownloadParsing.hpp  Downloader.cpp  Downloader.hpp
src/download/types/: Download.hpp  DownloadList.hpp
src/extraction/: FileExtraction.hpp  Filter.cpp  Filter.hpp  FilterGeneration.hpp  Filters.hpp
src/parsing/: MatchParsing.hpp
src/parsing/types/: MatchInfo.hpp  MatchResult.hpp  MatchTermination.hpp  MatchType.hpp
src/pgn_parsing/: MatchParsing.hpp
src/pgn_parsing/types/: MatchTermination.hpp  MatchType.hpp
src/utilities/: CommandLineUtilities.hpp  FileUtilities.hpp
